# scafacos

./: .gitignore  configure.ac
build-aux/: opencl-stringify
lib/: Makefile.am
lib/common/fcs-common/: FCSCommon.h  Makefile.am  fcs_math.h
lib/common/fcs-opencl/: Makefile.am  fcs_math.cl.h  fcs_ocl.c  fcs_ocl.cl.h  fcs_ocl.h
lib/common/near/: Makefile.am  near.c  near.cl  near.cl.c  near.h  near_common.h  near_ocl.h  near_sort.c  near_sort.cl  near_sort.cl.c  near_sort.h  near_sort_bitonic.cl  near_sort_bitonic.cl.c  near_sort_bucket.cl  near_sort_bucket.cl.c  near_sort_hybrid.cl  near_sort_hybrid.cl.c  near_sort_radix.cl  near_sort_radix.cl.c
lib/direct/: directc.c  directc.h
lib/p2nfft/: Makefile.am  init.c  nearfield.cl  nearfield.cl.c  nearfield.h  parameters.c  parameters.h  run.c  types.h
lib/p2nfft/build-aux/: opencl-stringify
m4/: ax_fcs_config.m4
package/: configure.ac
src/: FCSDefinitions.h  FCSInterface.c  FCSInterface.h  FCSInterface_p.h  FCSResult.c  FCSResult_p.h  fcs_common.c  fcs_common.h  fcs_direct.c  fcs_p2nfft.c  fcs_p2nfft_wrappers.h
test/generic/: common.cpp  scafacos_test.cpp
